--- a/user-backend/package.json
+++ b/user-backend/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^7.0.12"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "prettier": "^3.8.0"
   }
 }
